# burnman

./: .gitattributes  .gitignore  .readthedocs.yaml  Jenkinsfile  Jenkinsfile.cig  Readme.md  authors.md  birch_murnaghan.py  changelog.txt  code_of_conduct.md  comparison.py  comparison_old.py  composition.py  contributing.md  dependent_endmember.py  download.html  eos_from_ian.py  example_averaging.py  example_beginner.py  example_compare_all_methods.py  example_compare_enstpyro.py  example_compare_two_models.py  example_comparewithdepth.py  example_composition.py  example_find_pv.py  example_fit_data.py  example_geotherms.py  example_grid.py  example_inv_big_pv.py  example_inv_murakami.py  example_optimize_pv.py  example_optimize_slb2011.py  example_partition_coef.py  example_premite_isothermal.py  example_seismic.py  example_spintransition.py  example_uncertainty.py  example_user_input_material.py  example_woutput.py  examples.html  (+39 more)
.binder/: environment.yml  postBuild
RUN_MURAKAMIETAL2012/: c  userinput.py
burnman/: HHPH2013data_to_burnman.py  HPdata_to_burnman.py  P-V_test.py  SLBdata_to_burnman.py  TO_DO_LIST.txt  __init__.py  anisotropicmineral.py  anisotropy.py  assemblage.py  averaging_schemes.py  benchmark.py  birch_murnaghan.py  chemicalpotentials.py  combinedmineral.py  comparison.py  composite.py  compositealgebra.py  composition.py  composition_fitting.py  constants.py  cork.py  debye.py  einstein.py  endmemberdisorder.py  eos_fitting.py  equation_of_state.py  equilibrate.py  equilibration.py  equilibriumassemblage.py  equilibriumequations.py  geotherm.py  gibbsminimization.py  gridinterpolator.py  layer.py  linear_fitting.py  mademember.py  main.py  material.py  materials.py  mie_grueneisen_debye.py  (+44 more)
code/: __init__.py  birch_murnaghan.py  comparison.py  geotherm.py  main.py  material.py  minerals.py  minerals_matas.py  plots.py  seismic.py  seismic_models.py  seismo_in.py  slb_finitestrain.py  tools.py  voigt_reuss_hill.py
contrib/: readme.txt
data/: BurnMan.doc  PREMQL6.webarchive  ak135_lowermantle.txt  geotherm.txt  prem_table.txt  prem_table.txt~  prem_withQ.txt  pwave_slow.txt  readme.txt  slb_fig7.txt  swave_fast.txt  swave_slow.txt
docs/: anisotropic_materials.rst  anisotropic_materials_01_anisotropic_material.rst  anisotropic_materials_02_anisotropic_mineral.rst  anisotropic_materials_03_anisotropic_solution.rst  api.rst  api_calibrant_database.rst  api_compositions.rst  api_eos.rst  api_geotherms.rst  api_materials.rst  api_mineral_database.rst  api_optimize.rst  api_planets.rst  api_polytopes.rst  (+85 more)
(+673 files in other folders)
