[tool.poetry]
name = "burnman"
version = "2.0.0"
description = "A thermoelastic and thermodynamic toolkit for the Earth and planetary sciences"
license = "GPL"
authors = ["The BurnMan Team <bob.myhill@bristol.ac.uk>",]
readme = "Readme.md"
homepage = "https://geodynamics.github.io/burnman/"
repository = "https://github.com/geodynamics/burnman"
documentation = "https://burnman.readthedocs.io/"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24"
scipy = "^1.10"
sympy = "^1.12"
cvxpy = "^1.3"
matplotlib = "^3.7"
numba = "^0.59"
pycddlib-standalone = "^3.0"

[tool.poetry.dev-dependencies]
ipython = "^8.5"
numba = "^0.59"

[tool.poetry.group.dev.dependencies]
black = "24.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
