[tool.poetry]
name = "burnman"
version = "3.0.0a"
description = "A thermoelastic and thermodynamic toolkit for the Earth and planetary sciences"
license = "GPL"
authors = ["The BurnMan Team <bob.myhill@bristol.ac.uk>",]
readme = "Readme.md"
homepage = "https://geodynamics.github.io/burnman/"
repository = "https://github.com/geodynamics/burnman"
documentation = "https://burnman.readthedocs.io/"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2"
scipy = "^1.10"
sympy = "^1.12"
cvxpy = "^1.3"
matplotlib = "^3.7"
numba = [
    { version = ">=0.59,^0", python = "<3.14" },
    { version = ">=0.63.0b1", python = ">=3.14" }
]
pycddlib-standalone = {version = "^3.0", optional = true}


[tool.poetry.dev-dependencies]
ipython = "^8.5"
numba = ">=0.59,^0"

[tool.poetry.extras]
dev = ["pycddlib-standalone"]

[tool.poetry.group.dev.dependencies]
black = "24.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
